<resources>
    <string name="app_name">AB CHAT APP</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_user">New User ?</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="register">Register</string>
    <string name="please_fill_your_credentials">Please fill your credentials:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Username</string>
    <string name="show_password">show password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lon_in">LonIn</string>
    <string name="type_a_message">Type a message</string>
</resources>